# week1_chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  API_KEYS_SETUP.md  CONTRIBUTING.md  LICENSE  README.md  hello.py  main.py  pyproject.toml  requirements.txt
chatbot/: __init__.py  bot.py  config.py
tests/: __init__.py  test_bot.py  test_config.py  test_tools.py
tools/: base.py  registry.py
tools/available/: __init__.py  calculator.py  datetime_tool.py  file_operations.py  news_tool.py  stock_tool.py  weather_tool.py  web_search_tool.py
utils/: __init__.py  formatting.py  validators.py
